# LowLatencyTradingEngine

./: .gitignore  CMakeLists.txt  TODO  build.sh  hello.cpp  info.txt  lf_queue.h  lf_queue_example  logging.h  logging_example  macros.h  mcast_socket.cpp  mem_pool.h  mem_pool_example  socket_utils.h  tcp_server.cpp  tcp_socket.cpp  tcp_socket.h  thread_example  thread_utils.h  time_utils.h  workflow.txt
common/: CMakeLists.txt  build.sh  lf_queue.h  logging.h  macros.h  mcast_socket.cpp  mcast_socket.h  mem_pool.h  socket_utils.h  tcp_server.cpp  tcp_server.h  tcp_socket.cpp  tcp_socket.h  thread_utils.h  types.h
exchange/: exchange_main.cpp
exchange/market_data/: market_data_publisher.cpp  market_data_publisher.h  market_update.h  snapshot_synthesizer.cpp  snapshot_synthesizer.h
exchange/matcher/: matching_engine.cpp  matching_engine.h  me_order.h  me_order_book.cpp  me_order_book.h
exchange/order_server/: client_request.h  client_response.h  fifo_sequencer.h  order_server.cpp  order_server.h
trading/market_data/: market_data_consumer.cpp  market_data_consumer.h
trading/strategy/: market_order.h  market_orderbook.h
